changed min-height for hexagon issue on IE

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,6 +7,7 @@
     src: url("../../assets/fonts/Raleway-VariableFont_wght.ttf");
 }
 body{
+    overflow-x: hidden;
     font-family: "railway";
     background-color: #F2F4F3;
 }
@@ -26,7 +27,7 @@ body{
 .one, .two, .three, .four {
     transition: all .4s ease;
     -webkit-transition: all .5s ease;
-    height: 100%;
+    min-height: 300px;
     background-size: 100%;
     cursor: pointer;
     background-repeat: no-repeat;
